[package]
name = "react-rust-postgres"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
deadpool-postgres =  { version = "0.10.5", features = ["serde"] }
env_logger = "^0.10.0"
log = "^0.4.19"
serde = { version = "^1.0.166", features = ["derive"] }
serde_json = "^1.0.100"
tokio-postgres = "^0.7"
tokio-postgres-migration = "^0.1"
